INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)
FIND_PACKAGE(OpenCV REQUIRED)
ADD_LIBRARY(alignment SHARED alignment.cpp)
ADD_LIBRARY(feature SHARED feature.cpp)
ADD_LIBRARY(utility SHARED utility.cpp)
TARGET_LINK_LIBRARIES(alignment ${OpenCV_LIBS})
TARGET_LINK_LIBRARIES(feature ${OpenCV_LIBS})
TARGET_LINK_LIBRARIES(utility ${OpenCV_LIBS})
TARGET_LINK_LIBRARIES(feature alignment)

set_target_properties(utility PROPERTIES
    CXX_STANDARD 11
    CXX_STANDARD_REQUIRED ON
    CXX_EXTENSIONS OFF
)
